--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,6 +11,8 @@ textarea{
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .jumbotron {
@@ -39,22 +41,23 @@ textarea{
 .hour {
   background-color: #ffffff;
   color: #000000;
-  border-top: 1px dashed #000000;
+  border-top: 1px solid #000000;
+  padding-top: 15px;
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #bdbdbd;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: #f14e45;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color: #58ce58;
+  color: black;
 }
 
 .saveBtn {
@@ -65,7 +68,8 @@ textarea{
   color: white;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
-  transition: all .3s ease-in-out;
+.saveBtn:hover {
+  font-size: 25px;
+  transition: all .2s ease-in-out;
 }
+
